# bnn.torch

./: .gitignore  Binary.lua  BinarySpatialConvolution.cu  BinarySpatialConvolution.lua  CMakeLists.txt  README.md  bnn-1.0-0.rockspec  common.h  env.lua  ffi.lua  init.lua
cmake/: FindCudaArch.cmake
